add camp to openapi maping
